Added new email trigger for subscription and fixed few  bugs | Jeyam